instructions.Instructions.scala.error
Erreur de compilation :
Instructions:9: error: not found: value leverBrosse
leverBrosse()
^